# hermes-super-study-companion

./: .gitignore  INSTALL.md  NOTICE  README.md  __init__.py  agent-install.json  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml
ai_super_learning_companion/: __init__.py  core.py
skills/ai-super-learning-companion/: SKILL.md
tests/: test_plugin_entry.py  test_v02.py
